# rpmcontrol

./: README.md
.github/workflows/: ci.yml
avr-int24/: Cargo.toml  README.md
avr-int24/src/: asm_avr.rs  asm_generic.rs  lib.rs  raw.rs
debugtool/: Cargo.toml
debugtool/src/: diagram_area.rs  main.rs  main_window.glade  main_window.rs  serial.rs
debugtool/src/gui/: main_window.cmb  main_window.ui
firmware/: Cargo.toml  Makefile  README.md  avr-attiny26.json  avr-attiny861a.json
firmware/.cargo/: config.toml
firmware/src/: analog.rs  calibration.rs  debounce.rs  debug.rs  exint.rs  filter.rs  fixpt.rs  freq.rs  history.rs  hw.rs  main.rs  mains.rs  mon.rs  mon_pocheck.rs  mon_stack.rs  mutex.rs  pi.rs  pid.rs  pocheck.rs  ports.rs  ring.rs  shutoff.rs  snap.rs  speedo.rs  system.rs  temp.rs  timer.rs  triac.rs  usi_uart.rs
firmware_rust/: Cargo.toml  Makefile  build.sh
firmware_rust/src/: analog.rs  fixpt.rs  hw.rs  main.rs  mains.rs  mutex.rs  pi.rs  speedo.rs  system.rs  timer.rs  triac.rs
motmock/firmware/: Cargo.toml  Makefile  avr-atmega8.json  rust-toolchain.toml
motmock/firmware/.cargo/: config.toml
motmock/firmware/src/: filter.rs  main.rs
motmock/schematic/: motmock.kicad_prl  motmock.kicad_pro  motmock.kicad_sch
schematic/: control_loop.dia  isp.kicad_sch  ntc.kicad_sch  ntc.ods  phaseanglecontrol.kicad_prl  phaseanglecontrol.kicad_pro  phaseanglecontrol.kicad_sch  powersupply.kicad_sch  rpm_generator.kicad_sch  rpm_setpoint.kicad_sch  speedometer.kicad_sch
