[package]
name = "debugtool"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "std", "help", "usage", "error-context", "derive" ] }
gtk4 = "0.11"
plotters = "0.3"
plotters-cairo = "0.8"
rand = "0.10"
serialport = "4"

[patch.crates-io]
plotters-cairo = { git = "https://github.com/mbuesch/plotters-cairo.git", branch = "cairo-rs-0.22" }
