[package]
name = "rpmcontrol"
version = "0.1.0"
authors = [ "Michael Buesch <m@bues.ch>" ]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "rpmcontrol"
test = false
bench = false

[dependencies]
#avr-device = { version = "0.7", features = [ "attiny861a", "rt" ] }
avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "7619231fd51826c484708d1e89269d5dfe56fdd4", features = [ "attiny861a", "rt" ] }

avr-int24 = "1"
#avr-int24 = { git = "https://github.com/mbuesch/avr-int24.git", branch = "main" }

avr-q = "1"
#avr-q = { git = "https://github.com/mbuesch/avr-q.git", branch = "main" }

#avr-atomic = { path = "../../avr-atomic" }
avr-atomic = { git = "https://github.com/mbuesch/avr-atomic.git", branch = "main" }

#avr-context = { path = "../../avr-context" }
#avr-context = "1"
avr-context = { git = "https://github.com/mbuesch/avr-context.git", branch = "main" }

curveipo = "1"

[profile.dev]
panic = "abort"
lto = "fat"
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "s"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
