[package]
name = "rpmcontrol"
version = "0.1.0"
authors = [ "Michael Buesch <m@bues.ch>" ]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "rpmcontrol"
test = false
bench = false

[dependencies]
#avr-device = { path = "../../avr-device", features = [ "attiny861a", "rt" ] }
avr-device = { version = "0.8", features = [ "attiny861a", "rt" ] }
#avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "7818a35f63f221e7fa59c9f0b4cf284198f3436e", features = [ "attiny861a", "rt" ] }

avr-int24 = "1"
#avr-int24 = { path = "../../avr-int24" }
#avr-int24 = { git = "https://github.com/mbuesch/avr-int24.git", branch = "main" }

avr-q = "1"
#avr-q = { path = "../../avr-q" }
#avr-q = { git = "https://github.com/mbuesch/avr-q.git", branch = "main" }

avr-atomic = "1"
#avr-atomic = { path = "../../avr-atomic" }
#avr-atomic = { git = "https://github.com/mbuesch/avr-atomic.git", branch = "main" }

#avr-context = "1"
#avr-context = { path = "../../avr-context" }
avr-context = { git = "https://github.com/mbuesch/avr-context.git", branch = "main" }

#avr-stack = "1"
#avr-stack = { path = "../../avr-stack" }
avr-stack = { git = "https://github.com/mbuesch/avr-stack.git", branch = "main" }

curveipo = "1"

[profile.dev]
panic = "abort"
lto = "fat"
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "s"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
