[package]
name = "rpmcontrol"
version = "1.0.0"
authors = [ "Michael Buesch <m@bues.ch>" ]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "rpmcontrol"
test = false
bench = false

[dependencies]
avr-device = { version = "0.8", features = [ "attiny861a", "rt" ] }
#avr-device = { path = "../../avr-device", features = [ "attiny861a", "rt" ] }
#avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "...", features = [ "attiny861a", "rt" ] }

avr-q = "1"
#avr-q = { path = "../../avr-q" }
#avr-q = { git = "https://github.com/mbuesch/avr-q.git", branch = "main" }

avr-atomic = "1"
#avr-atomic = { path = "../../avr-atomic" }
#avr-atomic = { git = "https://github.com/mbuesch/avr-atomic.git", branch = "main" }

#avr-context = "1"
#avr-context = { path = "../../avr-context" }
avr-context = { git = "https://github.com/mbuesch/avr-context.git", branch = "main" }

#avr-stack = "1"
#avr-stack = { path = "../../avr-stack" }
avr-stack = { git = "https://github.com/mbuesch/avr-stack.git", branch = "main" }

curveipo = "1"
#curveipo = { path = "../../curveipors" }
#curveipo = { git = "https://github.com/mbuesch/curveipors.git", branch = "main" }

derive_more = { version = "2", default-features = false, features = [ "add", "add_assign", "not" ] }

[features]
default = [ "monitoring", "debug" ]

# The monitoring feature fully enables the safety monitoring of the RPM control loop.
#
# Warning: Disabling this feature can lead to dangerous behavior of the system.
#          Only disable this feature if you know what you are doing.
#
# Note that disabling the monitoring feature does *not* disable all safety features of the system.
# This feature is meant to be swiched off for testing and development purposes in `motmock` environments.
# This feature must be kept enabled for production builds.
monitoring = []

# The debug feature enables various debug features, such as UART and debug pin.
# This feature is no effect on the safety of the system, but can be useful for debugging and development.
# It is recommended to keep this feature enabled even for production builds.
debug = []

[profile.dev]
panic = "abort"
lto = "fat"
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "s"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
