[package]
name = "motmock"
version = "0.1.0"
authors = [ "Michael Buesch <m@bues.ch>" ]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "motmock"
test = false
bench = false

[dependencies]
avr-device = { version = "0.7", features = [ "atmega8", "rt" ] }

[profile.dev]
panic = "abort"
lto = "fat"
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "s"

[patch.crates-io]
avr-device = { path = "../../../avr-device" }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
