[package]
name = "motmock"
version = "0.1.0"
authors = [ "Michael Buesch <m@bues.ch>" ]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "motmock"
test = false
bench = false

[dependencies]
#avr-device = { version = "0.7", features = [ "atmega8", "rt" ] }
avr-device = { git = "https://github.com/Rahix/avr-device.git", rev = "7619231fd51826c484708d1e89269d5dfe56fdd4", features = [ "atmega8", "rt" ] }

[profile.dev]
panic = "abort"
lto = "fat"
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "s"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
